# smjni

./: .gitignore  Android.mk  CMakeLists.txt  COPYRIGHT.txt  LICENSE.txt  NOTICE.txt  README.md  build.gradle
inc/smjni/: config.h  ct_string.h  java_array.h  java_cast.h  java_class.h  java_class_table.h  java_direct_buffer.h  java_exception.h  java_externals.h  java_field.h  java_frame.h  java_method.h  java_ref.h  java_registration.h  java_runtime.h  java_string.h  java_type_traits.h  java_types.h  jni_provider.h  smjni.h  utf_util.h
jnigen/: .gitignore  build.gradle  settings.gradle
jnigen/annotations/: build.gradle
jnigen/annotations/src/smjni/jnigen/: CalledByNative.java  ExposeToNative.java
jnigen/gradle/wrapper/: gradle-wrapper.properties
jnigen/processor/: build.gradle
jnigen/processor/src/smjni/jnigen/: ClassContent.kt  Context.kt  Generator.kt  NameTable.kt  Processor.kt  (+3 more)
smjni/jnigen/annotations/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  maven-metadata.xml.sha256  maven-metadata.xml.sha512
smjni/jnigen/annotations/2.0/: annotations-2.0-javadoc.jar.md5  annotations-2.0-javadoc.jar.sha1  annotations-2.0-sources.jar.md5  annotations-2.0-sources.jar.sha1  annotations-2.0.jar.md5  annotations-2.0.jar.sha1  annotations-2.0.pom  annotations-2.0.pom.md5  annotations-2.0.pom.sha1
smjni/jnigen/annotations/2.1/: annotations-2.1-javadoc.jar.md5  annotations-2.1-javadoc.jar.sha1  annotations-2.1-sources.jar.md5  annotations-2.1-sources.jar.sha1  annotations-2.1.jar.md5  annotations-2.1.jar.sha1  annotations-2.1.pom  annotations-2.1.pom.md5  annotations-2.1.pom.sha1
smjni/jnigen/annotations/2.2/: annotations-2.2-javadoc.jar.md5  annotations-2.2-javadoc.jar.sha1  annotations-2.2-sources.jar.md5  annotations-2.2-sources.jar.sha1  annotations-2.2.jar.md5  annotations-2.2.jar.sha1  annotations-2.2.pom  annotations-2.2.pom.md5  annotations-2.2.pom.sha1
smjni/jnigen/annotations/3.0/: annotations-3.0-javadoc.jar.md5  annotations-3.0-javadoc.jar.sha1  annotations-3.0-sources.jar.md5  annotations-3.0-sources.jar.sha1  annotations-3.0.jar.md5  annotations-3.0.jar.sha1  annotations-3.0.pom  annotations-3.0.pom.md5  annotations-3.0.pom.sha1
smjni/jnigen/annotations/3.1/: annotations-3.1-javadoc.jar.md5  annotations-3.1-javadoc.jar.sha1  annotations-3.1-javadoc.jar.sha256  annotations-3.1-javadoc.jar.sha512  annotations-3.1-sources.jar.md5  annotations-3.1-sources.jar.sha1  annotations-3.1-sources.jar.sha256  annotations-3.1-sources.jar.sha512  annotations-3.1.jar.md5  annotations-3.1.jar.sha1  annotations-3.1.jar.sha256  annotations-3.1.jar.sha512  annotations-3.1.module  annotations-3.1.module.md5  annotations-3.1.module.sha1  annotations-3.1.module.sha256  annotations-3.1.module.sha512  annotations-3.1.pom  annotations-3.1.pom.md5  annotations-3.1.pom.sha1  annotations-3.1.pom.sha256  annotations-3.1.pom.sha512
smjni/jnigen/annotations/3.2/: annotations-3.2-javadoc.jar.md5  annotations-3.2-javadoc.jar.sha1  annotations-3.2-javadoc.jar.sha256  annotations-3.2-javadoc.jar.sha512  annotations-3.2-sources.jar.md5  annotations-3.2-sources.jar.sha1  annotations-3.2-sources.jar.sha256  annotations-3.2-sources.jar.sha512  annotations-3.2.jar.md5  annotations-3.2.jar.sha1  annotations-3.2.jar.sha256  annotations-3.2.jar.sha512  annotations-3.2.module  annotations-3.2.module.md5  annotations-3.2.module.sha1  annotations-3.2.module.sha256  annotations-3.2.module.sha512  annotations-3.2.pom  annotations-3.2.pom.md5  annotations-3.2.pom.sha1  annotations-3.2.pom.sha256  annotations-3.2.pom.sha512
smjni/jnigen/processor/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  maven-metadata.xml.sha256  maven-metadata.xml.sha512
smjni/jnigen/processor/2.0/: processor-2.0-sources.jar.md5  processor-2.0-sources.jar.sha1  processor-2.0.jar.md5  processor-2.0.jar.sha1  processor-2.0.pom  processor-2.0.pom.md5  processor-2.0.pom.sha1
smjni/jnigen/processor/2.1/: processor-2.1-sources.jar.md5  processor-2.1-sources.jar.sha1  processor-2.1.jar.md5  processor-2.1.jar.sha1  processor-2.1.pom  processor-2.1.pom.md5  processor-2.1.pom.sha1
smjni/jnigen/processor/2.2/: processor-2.2-sources.jar.md5  processor-2.2-sources.jar.sha1  processor-2.2.jar.md5  processor-2.2.jar.sha1  processor-2.2.pom  processor-2.2.pom.md5  processor-2.2.pom.sha1
smjni/jnigen/processor/3.0/: processor-3.0-sources.jar.md5  processor-3.0-sources.jar.sha1  processor-3.0.jar.md5  processor-3.0.jar.sha1  processor-3.0.pom  processor-3.0.pom.md5  processor-3.0.pom.sha1
smjni/jnigen/processor/3.1/: processor-3.1-sources.jar.md5  processor-3.1-sources.jar.sha1  processor-3.1-sources.jar.sha256  processor-3.1-sources.jar.sha512  processor-3.1.jar.md5  processor-3.1.jar.sha1  processor-3.1.jar.sha256  processor-3.1.jar.sha512  processor-3.1.module  processor-3.1.module.md5  processor-3.1.module.sha1  processor-3.1.module.sha256  processor-3.1.module.sha512  processor-3.1.pom  processor-3.1.pom.md5  processor-3.1.pom.sha1  processor-3.1.pom.sha256  processor-3.1.pom.sha512
smjni/jnigen/processor/3.2/: processor-3.2-sources.jar.md5  processor-3.2-sources.jar.sha1  processor-3.2-sources.jar.sha256  processor-3.2-sources.jar.sha512  processor-3.2.jar.md5  processor-3.2.jar.sha1  processor-3.2.jar.sha256  processor-3.2.jar.sha512  processor-3.2.module  processor-3.2.module.md5  processor-3.2.module.sha1  processor-3.2.module.sha256  processor-3.2.module.sha512  processor-3.2.pom  processor-3.2.pom.md5  processor-3.2.pom.sha1  processor-3.2.pom.sha256  processor-3.2.pom.sha512
src/: java_exception.cpp  java_externals.cpp  java_field.cpp  java_method.cpp  java_registration.cpp  java_runtime.cpp  java_string.cpp  jni_provider.cpp  stdpch.h
tests/: .gitignore  .lldbinit  CMakeLists.txt  build.gradle  settings.gradle
tests/gradle/wrapper/: gradle-wrapper.properties
tests/src/cpp/: CMakeLists.txt  integration_tests.cpp  java_ref_tests.cpp  smjnitests.cpp  string_tests.cpp  test_util.h  utf_tests.cpp
tests/src/java/smjni/tests/: BasicTest.java  TestJavaRef.java  TestSmJNI.java
(+1 files in other folders)
