#
# Copyright 2019 SmJNI Contributors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

cmake_minimum_required(VERSION 3.18)

project(test)

add_subdirectory(".." ${CMAKE_CURRENT_BINARY_DIR}/smjni)
add_subdirectory("src/cpp" ${CMAKE_CURRENT_BINARY_DIR}/test)


add_custom_target(javabuild  
    COMMAND ${CMAKE_CURRENT_LIST_DIR}/gradlew -PbuildDir=${CMAKE_CURRENT_BINARY_DIR}/java makeJNIHeaders
    WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}
)

add_dependencies(smjnitests javabuild)

add_custom_target(jar  
    COMMAND cp $<TARGET_FILE:smjnitests> ${CMAKE_CURRENT_BINARY_DIR}/java
    COMMAND ${CMAKE_CURRENT_LIST_DIR}/gradlew -PbuildDir=${CMAKE_CURRENT_BINARY_DIR}/java assemble
    WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}
)
